--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -123,3 +123,87 @@
   font-weight: 200;
   font-style: italic;
 }
+
+@font-face {
+  font-family: 'Source Sans Pro';
+  src: url('./fonts/SourceSansPro-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Regular';
+  src: url('./fonts/SourceSansPro-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Italic';
+  src: url('./fonts/SourceSansPro-Italic.ttf');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Bold';
+  src: url('./fonts/SourceSansPro-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Bold Italic';
+  src: url('./fonts/SourceSansPro-BoldItalic.ttf');
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Light';
+  src: url('./fonts/SourceSansPro-Light.ttf');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Light Italic';
+  src: url('./fonts/SourceSansPro-LightItalic.ttf');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Semi Bold';
+  src: url('./fonts/SourceSansPro-SemiBold.ttf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Semi Bold Italic';
+  src: url('./fonts/SourceSansPro-SemiBoldItalic.ttf');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Black';
+  src: url('./fonts/SourceSansPro-Black.ttf');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Source Sans Pro Black Italic';
+  src: url('./fonts/SourceSansPro-BlackItalic.ttf');
+  font-weight: 900;
+  font-style: italic;
+}
+
+body {
+  font-family: var(--font-regular);
+  font-size: 16px;
+  margin: 0px;
+  color: var(--color-text-primary);
+}
