Layout of input component

--- a/src/assets/docs.css
+++ b/src/assets/docs.css
@@ -36,6 +36,7 @@
   --color-bg-grey-2: #e2e6f0;
   --color-bg-grey-3: #eff2f9;
   --color-bg-grey-4: #f7f9ff;
+  --color-bg-input: #ffffff;
   --color-bg-input-disabled: #f1f1f1;
   --color-bg-pastel-yellow: #fff8db;
   --color-bg-pastel-orange: #ffefd6;
