--- a/src/atomic/Input/index.module.css
+++ b/src/atomic/Input/index.module.css
@@ -1,5 +1,6 @@
 .inputContainer {
   position: relative;
+  display: inline-block;
 }
 
 .inputLabel {
@@ -10,8 +11,8 @@
   font-size: 1rem;
   line-height: 1.5rem;
   position: absolute;
-  top: 0rem;
-  left: 1.51rem;
+  top: 0.75rem;
+  left: 1.5rem;
   transition: 0.25s;
 }
 
@@ -36,6 +37,56 @@
   line-height: 1.5rem;
   top: calc(50% - 1.5rem / 2 - 1.5rem);
   background: var(--color-bg-input);
+  color: var(--color-primary);
   padding: 0 0.5rem;
+  left: 1rem;
   border-radius: 1.5rem;
+}
+
+.input:focus {
+  border: 2px solid var(--color-primary);
+}
+
+.input:disabled {
+  background: var(--color-bg-input-disabled);
+  color: var(--color-text-disabled);
+}
+
+.input.changed.error:focus {
+  border: 2px solid var(--color-error);
+}
+
+.input.changed.warning:focus {
+  border: 2px solid var(--color-highlighted);
+}
+
+.inputLabel.changed {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  top: calc(50% - 1.5rem / 2 - 1.5rem);
+  background: var(--color-bg-input);
+  padding: 0 0.5rem;
+  left: 1rem;
+  border-radius: 1.5rem;
+}
+
+.inputLabel.changed.disabled {
+  background: var(--color-bg-input-disabled);
+  color: var(--color-text-disabled);
+}
+
+.input.changed.error {
+  border: 1px solid var(--color-error);
+}
+
+.inputLabel.changed.error {
+  color: var(--color-error);
+}
+
+.input.changed.warning {
+  border: 1px solid var(--color-highlighted);
+}
+
+.inputLabel.changed.warning {
+  color: var(--color-highlighted);
 }
