--- a/src/atomic/Input/index.module.css
+++ b/src/atomic/Input/index.module.css
@@ -26,11 +26,13 @@
   font-style: normal;
   font-weight: bold;
   font-size: 1rem;
-  line-height: 1.5rem;
+  min-width: 14rem;
+  height: 3rem;
   color: var(--color-text-primary);
   padding-top: 0.6875rem;
   padding-bottom: 0.8125rem;
   padding-left: 1.5rem;
+  box-sizing: border-box;
 }
 
 .inputContainer:focus-within > .inputLabel {
