--- a/src/atomic/Button/index.module.css
+++ b/src/atomic/Button/index.module.css
@@ -131,3 +131,40 @@
 .floating {
   box-shadow: 0 1rem 3rem rgba(27, 31, 39, 0.3);
 }
+
+/** RIPPLE ANIMATION */
+.ripple {
+  position: relative;
+  overflow: hidden;
+}
+
+.ripple:before {
+  --ripple-background: white;
+  --ripple-opacity: 0.3;
+  --ripple-duration: 600ms;
+
+  content: '';
+  position: absolute;
+  display: block;
+  background: var(--ripple-background, white);
+  border-radius: 50%;
+  pointer-events: none;
+  top: calc(var(--y) * 1px);
+  left: calc(var(--x) * 1px);
+  width: calc(var(--d) * 1px);
+  height: calc(var(--d) * 1px);
+  opacity: calc(var(--o, 1) * var(--ripple-opacity, 0.3));
+  transition: calc(var(--t, 0) * var(--ripple-duration, 600ms))
+    var(--ripple-easing, linear);
+  transform: translate(-50%, -50%) scale(var(--s, 1));
+  transform-origin: center;
+}
+
+/** PULSE ANIMATION */
+.pulse {
+    transition: box-shadow .1s ease-out;
+    box-shadow: 0 0 0 rgba(160, 160, 160, 0);
+}
+.pulse:active {
+    box-shadow: 0 0 2px 4px rgba(160, 160, 160, 0.4);
+}
