--- a/src/atomic/Button/index.module.css
+++ b/src/atomic/Button/index.module.css
@@ -1,6 +1,6 @@
 .button {
   color: var(--color-text-inverse);
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   border-radius: 1.5rem;
