--- a/src/atomic/Breadcrumb/index.module.css
+++ b/src/atomic/Breadcrumb/index.module.css
@@ -11,7 +11,7 @@
 }
 
 .item > * {
-    display: inline;
+    display: inline-flex;
     color: var(--color-primary);
     transition: color .2s;
     text-decoration: none;
@@ -23,8 +23,4 @@
 
 .item:last-child > * {
     color: var(--color-text-disabled);
-}
-
-.item svg {
-    margin: 0 13px
 }
