--- a/src/atomic/Select/index.module.css
+++ b/src/atomic/Select/index.module.css
@@ -2,6 +2,9 @@
   position: relative;
   display: inline-block;
   margin: 0.75rem;
+  box-sizing: border-box;
+  min-width: 14rem;
+  height: calc(3rem + 2px);
 }
 
 .label {
@@ -16,6 +19,16 @@
   left: 1.5rem;
   transition: 0.25s;
 }
+.label.labelUp {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  top: calc(50% - 1.5rem / 2 - 1.5rem);
+  background: var(--color-bg-input);
+  padding: 0 0.5rem;
+  left: 1rem;
+  border-radius: 1.5rem;
+}
+
 .labelContainer {
   outline: none;
 }
@@ -36,11 +49,13 @@
   padding-left: 1.5rem;
   box-sizing: border-box;
 }
+
 .arrowIcon {
   cursor: pointer;
   position: absolute;
   top: 0.75rem;
   right: 0.75rem;
+  outline: none;
 }
 .menu {
   position: absolute;
@@ -55,30 +70,10 @@
   padding: 0.5rem;
   box-shadow: 0 0 3rem var(--color-shadow);
   outline: none;
-  width: 100%;
+  width: calc(100% + 4px);
+  left: -2px;
   box-sizing: border-box;
-}
-
-.menu::before {
-  content: '';
-  display: block;
-  position: absolute;
-  height: 1.5rem;
-  width: 1px;
-  background-color: var(--color-border);
-  bottom: 100%;
-  left: -1px;
-}
-
-.menu::after {
-  content: '';
-  display: block;
-  position: absolute;
-  height: 1.5rem;
-  width: 1px;
-  background-color: var(--color-border);
-  bottom: 100%;
-  right: -1px;
+  transition: 0.3s;
 }
 
 .menu > li {
@@ -94,4 +89,21 @@
 
 .menu > li.emptyList {
   color: var(--color-text-disabled);
+}
+
+.container.isOpen .label.labelUp {
+  color: var(--color-primary);
+}
+
+.container.isOpen {
+  border-color: var(--color-primary);
+  border-style: solid solid none solid;
+  border-width: 2px;
+  border-radius: 1.7rem 1.7rem 0 0;
+}
+
+.container.isOpen .menu {
+  border-color: var(--color-primary);
+  border-style: none solid solid solid;
+  border-width: 2px;
 }
