--- a/src/Typography/Paragraph/index.module.css
+++ b/src/Typography/Paragraph/index.module.css
@@ -6,8 +6,10 @@
   font-weight: normal;
   font-size: 1rem;
   line-height: 1.5rem;
+  margin: 0;
 }
 
 .highlighted {
+  font-family: var(--font-bold);
   font-weight: bold;
 }
