--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -31,6 +31,7 @@
 
 .labelContainer {
   outline: none;
+  margin: 0;
 }
 .input {
   outline: none;
@@ -74,6 +75,7 @@
   left: -2px;
   box-sizing: border-box;
   transition: 0.3s;
+  z-index: 999;
 }
 
 .menu > li {
