--- a/src/Input/index.module.css
+++ b/src/Input/index.module.css
@@ -56,6 +56,14 @@
   color: var(--color-text-disabled);
 }
 
+.input.error:focus {
+  border: 2px solid var(--color-error);
+}
+
+.input.warning:focus {
+  border: 2px solid var(--color-highlighted);
+}
+
 .input.changed.error:focus {
   border: 2px solid var(--color-error);
 }
@@ -79,7 +87,7 @@
   color: var(--color-text-disabled);
 }
 
-.input.changed.error {
+.input.error {
   border: 1px solid var(--color-error);
 }
 
@@ -87,7 +95,7 @@
   color: var(--color-error);
 }
 
-.input.changed.warning {
+.input.warning {
   border: 1px solid var(--color-highlighted);
 }
 
