--- a/src/Textarea/index.module.css
+++ b/src/Textarea/index.module.css
@@ -38,6 +38,7 @@
 
 .textareaWrapper {
   padding: 0.6875rem 1rem 0.8125rem 1.5rem;
+  background: var(--color-bg-input);
   border: 1px solid var(--color-border);
   border-radius: 1.5rem;
   transition: border-color 0.3s ease-in-out;
