#28 пофиксил оверлей и ширину модального окна, добавил пропс block в Input

--- a/src/Modal/index.module.css
+++ b/src/Modal/index.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: var(--color-shadow);
+  background-color: var(--color-modal-overlay);
   z-index: 998;
   width: 100vw;
   height: 100vh;
