--- a/src/docs.css
+++ b/src/docs.css
@@ -31,6 +31,7 @@
 
   --color-border: #8e939f;
   --color-shadow: rgba(73, 92, 136, 0.15);
+  --color-modal-overlay: #1b1f2780;
 
   --color-bg-grey-1: #d3d9e6;
   --color-bg-grey-2: #e2e6f0;
