--- a/src/Checkbox/index.module.css
+++ b/src/Checkbox/index.module.css
@@ -1,8 +1,3 @@
-.checkboxWrapper {
-  display: flex;
-  align-items: center;
-}
-
 .checkbox {
   display: none;
 }
@@ -11,6 +6,8 @@
   position: relative;
   cursor: pointer;
   padding: 0;
+  display: flex;
+  align-items: center;
 }
 
 .checkbox + label:before {
@@ -40,16 +37,15 @@
 }
 
 .checkboxBlue:checked + label:before {
-    background: var(--color-chart-blue);
+  background: var(--color-chart-blue);
 }
 
-
 .checkboxYellow:checked + label:before {
-    background: var(--color-chart-yellow);
+  background: var(--color-chart-yellow);
 }
 
 .checkboxPurple:checked + label:before {
-    background: var(--color-chart-purple);
+  background: var(--color-chart-purple);
 }
 
 .checkbox:checked + label:after {
@@ -61,23 +57,26 @@
   width: 2px;
   height: 2px;
   box-shadow: 0.125rem 0 0 var(--color-text-inverse),
-    0.25rem 0 0 var(--color-text-inverse), 0.25rem -0.125rem 0 var(--color-text-inverse),
-    0.25rem -0.25rem 0 var(--color-text-inverse), 0.25rem -0.375rem 0 var(--color-text-inverse),
+    0.25rem 0 0 var(--color-text-inverse),
+    0.25rem -0.125rem 0 var(--color-text-inverse),
+    0.25rem -0.25rem 0 var(--color-text-inverse),
+    0.25rem -0.375rem 0 var(--color-text-inverse),
     0.25rem -0.5rem 0 var(--color-text-inverse);
   transform: rotate(45deg);
 }
 
 .disabledChecked:checked + label:before {
-    background: var(--color-bg-input-disabled);
-    border-color: var(--color-border);
+  background: var(--color-bg-input-disabled);
+  border-color: var(--color-border);
 }
 
-
 .disabledChecked:checked + label:after {
-    background-color: var(--color-text-disabled);
-    box-shadow: 0.125rem 0 0 var(--color-text-disabled),
-    0.25rem 0 0 var(--color-text-disabled), 0.25rem -0.125rem 0 var(--color-text-disabled),
-    0.25rem -0.25rem 0 var(--color-text-disabled), 0.25rem -0.375rem 0 var(--color-text-disabled),
+  background-color: var(--color-text-disabled);
+  box-shadow: 0.125rem 0 0 var(--color-text-disabled),
+    0.25rem 0 0 var(--color-text-disabled),
+    0.25rem -0.125rem 0 var(--color-text-disabled),
+    0.25rem -0.25rem 0 var(--color-text-disabled),
+    0.25rem -0.375rem 0 var(--color-text-disabled),
     0.25rem -0.5rem 0 var(--color-text-disabled);
 }
 
