--- a/src/Input/index.module.css
+++ b/src/Input/index.module.css
@@ -1,7 +1,13 @@
+.wrapper {
+  margin: 0 0.75rem 0.75rem 0;
+  display: inline-block;
+  width: 18.5rem;
+}
+
 .inputContainer {
   position: relative;
-  display: inline-block;
-  margin: 0.75rem;
+  display: block;
+  margin-left: 0;
 }
 
 .inputLabel {
@@ -15,6 +21,7 @@
   top: 0.75rem;
   left: 1.5rem;
   transition: 0.25s;
+  pointer-events: none;
 }
 
 .input {
@@ -26,7 +33,7 @@
   font-style: normal;
   font-weight: bold;
   font-size: 1rem;
-  min-width: 14rem;
+  width: 100%;
   height: 3rem;
   color: var(--color-text-primary);
   padding-top: 0.6875rem;
@@ -123,4 +130,16 @@
 
 .block {
   width: 100%;
+}
+
+.errorMessage {
+  margin: 0;
+  font-size: 0.875rem;
+  height: 1.125rem;
+  color: var(--color-error);
+  padding-top: 0.125rem;
+  padding-left: 1.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
