--- a/src/Textarea/index.module.css
+++ b/src/Textarea/index.module.css
@@ -1,7 +1,8 @@
 .wrapper {
   position: relative;
   display: inline-block;
-  margin: 0.75rem;
+  width: 14rem;
+  margin: 0 0.75rem 0.75rem 0;
 }
 
 .wrapper:focus-within > .label {
@@ -24,6 +25,7 @@
   top: 0.75rem;
   left: 1.5rem;
   transition: 0.25s;
+  pointer-events: none;
 }
 
 .label.changed {
@@ -43,7 +45,6 @@
   border-radius: 1.5rem;
   transition: border-color 0.3s ease-in-out;
   box-sizing: border-box;
-  min-width: 14rem;
   min-height: 4.5rem;
   height: 4.5rem; /* box-sizing без этого не пашет, wtf */
 }
@@ -128,5 +129,22 @@
   padding-right: 1rem;
   font-family: var(--font-italic);
   color: var(--color-border);
-  font-size: 14px;
+  font-size: 0.875rem;
+}
+
+.block {
+  width: 100%;
+}
+
+.errorMessage {
+  margin: 0;
+  font-size: 0.875rem;
+  height: 1.125rem;
+  color: var(--color-error);
+  padding-top: 0.125rem;
+  padding-left: 1.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: var(--font-regular);
 }
