#30 исправлены баги в селектах и габариты инпутов, фикс крошек

--- a/src/Input/index.module.css
+++ b/src/Input/index.module.css
@@ -1,7 +1,7 @@
 .wrapper {
-  margin: 0 0.75rem 0.75rem 0;
   display: inline-block;
-  width: 18.5rem;
+  width: 14rem;
+  margin-bottom: 10px;
 }
 
 .inputContainer {
