--- a/src/Breadcrumb/index.module.css
+++ b/src/Breadcrumb/index.module.css
@@ -1,26 +1,27 @@
 .breadcrumb {
-    display: inline-flex;
-    list-style-type: none;
-    font-family: var(--font-semi-bold);
-    padding-left: 0;
+  display: inline-flex;
+  list-style-type: none;
+  font-family: var(--font-semi-bold);
+  padding-left: 0;
+  margin: 0;
 }
 
 .item {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .item > * {
-    display: inline-flex;
-    color: var(--color-primary);
-    transition: color .2s;
-    text-decoration: none;
+  display: inline-flex;
+  color: var(--color-primary);
+  transition: color 0.2s;
+  text-decoration: none;
 }
 
 .item > *:hover {
-    color: var(--color-primary-hover);
+  color: var(--color-primary-hover);
 }
 
 .item:last-child > * {
-    color: var(--color-text-disabled);
+  color: var(--color-text-disabled);
 }
