--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -1,10 +1,14 @@
 .container {
   position: relative;
   display: inline-block;
-  margin: 0 0.75rem 0.75rem 0;
   box-sizing: border-box;
-  width: 14rem;
-  height: calc(3rem + 2px);
+  border: 2px solid transparent;
+  width: calc(14rem + 4px);
+  margin-bottom: 10px;
+  z-index: 998;
+}
+
+.container:focus-within {
   z-index: 999;
 }
 
@@ -23,7 +27,7 @@
 .label.labelUp {
   font-size: 0.875rem;
   line-height: 1.5rem;
-  top: calc(50% - 1.5rem / 2 - 1.5rem);
+  top: calc(50% - 2rem / 2 - 2rem);
   background: var(--color-bg-input);
   padding: 0 0.5rem;
   left: 1rem;
@@ -40,7 +44,6 @@
   border: 1px solid var(--color-border);
   border-radius: 1.5rem;
   font-family: var(--font-regular);
-  font-style: normal;
   font-weight: bold;
   font-size: 1rem;
   min-width: 14rem;
@@ -67,7 +70,7 @@
   border-radius: 0 0 1rem 1rem;
   border-color: var(--color-border);
   border-style: solid;
-  border-width: 0 1px 1px 1px 1px;
+  border-width: 0 1px 1px 1px;
   padding: 0.5rem;
   box-shadow: 0 0 3rem var(--color-shadow);
   outline: none;
