--- a/src/Textarea/index.module.css
+++ b/src/Textarea/index.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: inline-block;
   width: 14rem;
-  margin: 0 0.75rem 0.75rem 0;
+  margin-bottom: 10px;
 }
 
 .wrapper:focus-within > .label {
