#34 Добавлены новые цвета для типографии

--- a/src/Typography/Text/index.module.css
+++ b/src/Typography/Text/index.module.css
@@ -14,6 +14,18 @@
   color: var(--color-text-inverse);
 }
 
+.green {
+  color: var(--color-primary);
+}
+
+.orange {
+  color: var(--color-highlighted);
+}
+
+.red {
+  color: var(--color-error);
+}
+
 .text {
   font-family: var(--font-regular);
   font-style: normal;
