--- a/src/Typography/Heading/index.module.css
+++ b/src/Typography/Heading/index.module.css
@@ -14,6 +14,18 @@
   color: var(--color-text-inverse);
 }
 
+.green {
+  color: var(--color-primary);
+}
+
+.orange {
+  color: var(--color-highlighted);
+}
+
+.red {
+  color: var(--color-error);
+}
+
 h2.head {
   font-family: var(--font-bold);
   font-style: normal;
