--- a/src/Typography/Hero/index.module.css
+++ b/src/Typography/Hero/index.module.css
@@ -14,6 +14,18 @@
   color: var(--color-text-inverse);
 }
 
+.green {
+  color: var(--color-primary);
+}
+
+.orange {
+  color: var(--color-highlighted);
+}
+
+.red {
+  color: var(--color-error);
+}
+
 .hero {
   display: block;
   font-family: var(--font-hero);
