--- a/src/Cards/index.module.css
+++ b/src/Cards/index.module.css
@@ -1,7 +1,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  border-radius: 40px;
+  border-radius: 2.5rem;
   width: 100%;
   background: var(--color-bg-grey-4);
 }
@@ -11,7 +11,7 @@
 }
 
 .card > .img {
-  border-radius: 40px 40px 0 0;
+  border-radius: 2.5rem 2.5rem 0 0;
   background-size: cover;
   background-repeat: no-repeat;
   height: 10rem;
