--- a/src/Cards/index.module.css
+++ b/src/Cards/index.module.css
@@ -14,6 +14,7 @@
   border-radius: 2.5rem 2.5rem 0 0;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: top;
   height: 10rem;
 }
 
