--- a/src/Tooltip/index.module.css
+++ b/src/Tooltip/index.module.css
@@ -13,9 +13,9 @@
   display: inline-block;
   padding: 1rem 1.5rem;
   border-radius: 1rem;
-  background: var(--color-blue);
   color: var(--color-text-inverse);
   position: relative;
+  box-shadow: 0 16px 48px rgba(73, 92, 136, 0.15);
 }
 
 .tooltipContainer {
