--- a/src/Filters/index.module.css
+++ b/src/Filters/index.module.css
@@ -1,5 +1,6 @@
 .wrapper {
   position: fixed;
+  z-index: 100;
   top: 0;
   right: -456px;
   width: 456px;
@@ -31,4 +32,14 @@
 
 .show {
   right: 0;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: transparent;
+  z-index: 99;
 }
