--- a/src/Tabs/index.module.css
+++ b/src/Tabs/index.module.css
@@ -47,7 +47,9 @@
 .tabContainer.buttons .tab {
   background: var(--color-bg-grey-3);
   border-radius: 2rem;
-  margin: 0 0.5rem;
+  margin: 0 0 0 0.5rem;
+  min-width: 2.5rem;
+  padding: 0 1rem;
 }
 
 .tabContainer.buttons .tab.activeTab {
