--- a/src/Uploader/index.module.css
+++ b/src/Uploader/index.module.css
@@ -1,10 +1,12 @@
 .uploader {
+  --uploader-size: 16.5rem;
+
   display: inline-flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 12rem;
-  height: 12rem;
+  width: var(--uploader-size);
+  height: var(--uploader-size);
   border: 2px dashed var(--color-border);
   border-radius: 32px;
   padding: 16px;
@@ -14,8 +16,8 @@
 }
 
 .uploader.process {
-  width: 12.2rem;
-  height: 12.2rem;
+  width: calc(var(--uploader-size) + 0.2rem);
+  height: calc(var(--uploader-size) + 0.2rem);
   margin: 0rem;
   border-color: var(--color-primary-hover);
 }
@@ -59,8 +61,8 @@
 .uploader.wait:hover,
 .uploader.wait:focus,
 .uploader.wait:active {
-  width: 12.2rem;
-  height: 12.2rem;
+  width: calc(var(--uploader-size) + 0.2rem);
+  height: calc(var(--uploader-size) + 0.2rem);
   margin: 0rem;
   border-color: var(--color-primary-hover);
   background-color: var(--color-bg-pastel-green);
