--- a/src/Notification/index.module.css
+++ b/src/Notification/index.module.css
@@ -5,6 +5,18 @@
   top: 0;
 }
 
+.popup {
+  z-index: 999;
+  float: right;
+  position: relative;
+  right: -1000px;
+  box-shadow: 0px 1rem 3rem rgba(73, 92, 136, 0.15);
+  border-radius: 1rem;
+  width: 500px;
+  margin: 0.5rem;
+  display: flex;
+}
+
 .notification {
   z-index: 999;
   box-shadow: 0px 1rem 3rem rgba(73, 92, 136, 0.15);
@@ -15,14 +27,14 @@
 }
 
 .notificationWrapped {
-  transition: 1.2s;
+  transition: 1.2s cubic-bezier(0.91, 0.05, 0.05, 0.91);
 }
 
-.notification.success {
+.success {
   background-color: var(--color-notification-success);
 }
 
-.notification.error {
+.error {
   background-color: var(--color-notification-error);
 }
 
