--- a/src/Typography/Hero/index.module.css
+++ b/src/Typography/Hero/index.module.css
@@ -26,6 +26,18 @@
   color: var(--color-error);
 }
 
+.terminal {
+  color: var(--color-text-terminal-regular);
+}
+
+.inverseSecondary {
+  color: var(--color-text-inverse-secondary);
+}
+
+.inversePrimary {
+  color: var(--color-text-inverse-secondary);
+}
+
 .hero {
   display: block;
   font-family: var(--font-hero);
