--- a/src/docs.css
+++ b/src/docs.css
@@ -12,6 +12,7 @@
   --font-semi-bold-italic: 'Source Sans Pro Semi Bold Italic';
   --font-black: 'Source Sans Pro Black';
   --font-black-italic: 'Source Sans Pro Black Italic';
+  --font-code: 'FiraCode';
 
   /** colors */
   --color-primary: #52ae30;
@@ -28,6 +29,9 @@
   --color-text-secondary: #6e7482;
   --color-text-disabled: #ababab;
   --color-text-inverse: #ffffff;
+  --color-text-terminal-regular: #f2f2f2;
+  --color-text-inverse-primary: #e6eaf2;
+  --color-text-inverse-secondary: #a1a7b3;
 
   --color-border: #8e939f;
   --color-shadow: rgba(73, 92, 136, 0.15);
@@ -44,6 +48,9 @@
   --color-bg-pastel-red: #ffe0e3;
   --color-bg-pastel-blue: #dbf4fa;
   --color-bg-pastel-green: #def7ea;
+  --color-bg-dark-4: #1f2226;
+  --color-bg-dark-2: #333740;
+  --color-bg-dark-1: #474d59;
 
   --color-hero-bg-pastel-yellow: #e9c597;
   --color-hero-bg-pastel-orange: #f6ae8b;
