--- a/src/ActionInput/index.module.css
+++ b/src/ActionInput/index.module.css
@@ -1,8 +1,23 @@
+.inputContainer {
+  display: flex;
+  align-items: center;
+  height: 3rem;
+  border: 2px solid var(--color-primary);
+  border-radius: 1.5rem;
+}
+
 .input {
   outline: none;
-  border: 1px solid var(--color-border);
-  height: 3rem;
-  border-radius: 1.5rem;
-  padding: 0 1.5rem;
+  border: 0;
+  margin-left: 1.5rem;
+  margin-right: 0.5rem;
   font-size: 1rem;
+  width: 100%;
+}
+
+.actions {
+display: inline-block;
+padding: 0 0.5rem;
+border-top-right-radius: 1.5rem;
+border-bottom-right-radius: 1.5rem;
 }
