--- a/src/Input/index.module.css
+++ b/src/Input/index.module.css
@@ -30,8 +30,9 @@
 
 .suffix {
   position: absolute;
+  display: inline-block;
   width: 3rem;
-  line-height: 3rem;
+  height: 3rem;
   right: 0;
 }
 
@@ -41,8 +42,9 @@ input.withPrefix {
 
 .prefix {
   position: absolute;
+  display: inline-block;
   width: 3rem;
-  line-height: 3rem;
+  height: 3rem;
   left: 0;
   text-align: right;
 }
