Edit dark theme

--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -33,7 +33,7 @@
   --color-bg-grey-3: #292c33;
   --color-bg-grey-4: #1f2226;
 
-  --color-bg-input: #1f222660;
+  --color-bg-input: #292c33;
   --color-bg-input-disabled: #393b4040;
 
   /** border colors */
