--- a/src/ColorSelection/index.module.css
+++ b/src/ColorSelection/index.module.css
@@ -85,6 +85,8 @@
   border-left: 1px solid var(--color-bg-grey-1);
   height: 20px;
   box-sizing: border-box;
+  background-color: transparent;
+  color: var(--color-text-primary)
 }
 
 .input.notAllowed {
