--- a/src/RadioGroup/index.module.css
+++ b/src/RadioGroup/index.module.css
@@ -42,7 +42,7 @@
   height: 24px;
   border: 1px solid var(--color-primary);
   border-radius: 50%;
-  background-color: #fff;
+  background-color: var(--color-bg-input);
   box-sizing: border-box;
 }
 
