fixed pointer events in buttons and selects

--- a/src/Button/index.module.css
+++ b/src/Button/index.module.css
@@ -19,6 +19,10 @@
   outline: none;
 }
 
+.button * {
+  pointer-events: none;
+}
+
 /** BACKGROUNDS */
 .primary {
   background-color: var(--color-primary);
