--- a/src/RoundButton/index.module.css
+++ b/src/RoundButton/index.module.css
@@ -11,6 +11,10 @@
   transition: background-color 0.3s ease-in-out;
 }
 
+button * {
+  pointer-events: none;
+}
+
 .primary {
   background-color: var(--color-primary);
 }
