--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -5,6 +5,10 @@
   margin-bottom: 1.25rem;
 }
 
+.container span {
+  pointer-events: none;
+}
+
 .labelContainer:focus-within {
   z-index: 999;
 }
